--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -24,9 +25,12 @@
     "mongoose": "^5.10.3",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "newrelic": "^6.13.0",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
     "request": "^2.88.2"
